--- a/.travis.yml
+++ b/.travis.yml
@@ -26,8 +26,8 @@ deploy:
     slug: wp-rest-filter
     username: sk8tech
     password: $WORDPRESS_ORG_PASSWORD
-    build_dir: build 
-    # assets_dir: assets
+    build_dir: /build 
+    assets_dir: /assets
  
 script:
   # Run your tests here.
