--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 # .travis.yml
- 
+# see https://kuzmi.ch/articles/wordpress-plugin-and-theme-development-using-git-only/
+
 language: php
  
 php:
@@ -7,18 +8,19 @@ php:
  
 script:
   # Run your tests here.
+  - php -l *.php
   - echo 'Tested'
 
-branches:
-  only:
-  # Enable Travis hook on tags (it is regular expression for semver tag)*
-  - "/\\d\\.\\d\\.\\d/"
+# branches:
+#   only:
+#   # Enable Travis hook on tags (it is regular expression for semver tag)*
+#   - "/\\d\\.\\d\\.\\d/"
 
 # Enable Travis deployment
 deploy:
   # Use script as a deployment tool
   provider: script
-  script: deploy/deploy.sh
+  script: $TRAVIS_BUILD/deploy/deploy.sh
   # Restrict deployment only for tags
-  on:
-    tags: true
+  # on:
+  #   tags: true
